--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -38,9 +38,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: npm
+          cache: yarn
       - name: Install dependencies
-        run: npm i
+        run: npm i yarn -g && yarn install
       - name: Build
         run: npm run build
       - name: Setup Pages
