--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -40,7 +40,7 @@ jobs:
           node-version: 18
           cache: npm
       - name: Install dependencies
-        run: npm ci
+        run: npm config set registry https://registry.npmmirror.com && npm ci
       - name: Build
         run: npm run build
       - name: Setup Pages
