--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -39,8 +39,10 @@ jobs:
         with:
           node-version: 18
           cache: npm
+      - name: set registry
+        run: npm config set registry https://mirrors.huaweicloud.com/repository/npm/
       - name: Install dependencies
-        run: npm config set registry https://registry.npm.taobao.org && npm i
+        run: npm install
       - name: Build
         run: npm run build
       - name: Setup Pages
