--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -39,8 +39,8 @@ jobs:
         with:
           node-version: 18
           cache: npm
-      - name: set registry
-        run: npm config set registry https://mirrors.huaweicloud.com/repository/npm/
+      - name: Set registry
+        run: npm config set registry https://mirrors.huaweicloud.com/repository/npm/ && npm config set proxy false && npm cache clean
       - name: Install dependencies
         run: npm install
       - name: Build
