--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -40,7 +40,7 @@ jobs:
           node-version: 18
           cache: npm
       - name: Set registry
-        run: npm config set registry https://mirrors.huaweicloud.com/repository/npm/ && npm config set proxy false && npm cache clean
+        run: npm config set registry https://mirrors.huaweicloud.com/repository/npm/ && npm config set proxy false && npm cache clean --force
       - name: Install dependencies
         run: npm install
       - name: Build
