--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -40,7 +40,7 @@ jobs:
           node-version: 18
           cache: npm
       - name: Clean cache 
-        run: npm config set proxy false && npm cache clean --force
+        run: npm config set registry https://registry.npmjs.org && npm config set proxy false
       - name: Install dependencies
         run: npm i
       - name: Build
