--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -1,54 +1,55 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
-
-on:
-  # Runs on pushes targeting the default branch
+on: 
   push:
-    branches: [main]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-env:
-  # Hosted GitHub runners have 7 GB of memory available, let's use 6 GB
-  NODE_OPTIONS: --max-old-space-size=6144
+    branches:
+      - main
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: $
+  Build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+    # 步骤名称
+    - name: checkout code
+      uses: actions/checkout@v2
+    - name: actions/setup-node@v2
+      uses: actions/setup-node@v2   
+      with:
+        node-version: '16.14'
+        cache: 'yarn'
+        cache-dependency-path: '**/yarn.lock'
+    # 缓存 有需要可以开启 同时 setu node 也可以进行缓存
+    # - name: yarn cache
+    #   id: yarn-cahce-dir-path
+    #   run: echo "::set-output name=dir::$(yarn cache dir)"
+    # - uses: actions/cache@v2
+    #   id: yarn-cache
+    #   with: 
+    #     path: ${{ steps.yarn-cahce-dir-path.outputs.dir }}
+    #     key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+    #     restore-keys: | 
+    #       ${{ runner.os }}-yarn-    
+    - run: yarn install && yarn build  
+    # 上传打包好的文件，所以下一步可以使用
+    - name: upload files 
+      uses: actions/upload-artifact@v2
+      with: 
+        name: build-pages
+        path: build
+        retention-days: 1
+  Deploy: 
+    needs: Build # 确保build 阶段完成
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: download build files
+        uses: actions/download-artifact@v2
         with:
-          node-version: 18
-      - name: Install dependencies
-        run: yarn install
-      - name: Build
-        run: yarn build
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          # Upload entire repository
+          name: build-pages
           path: build
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+      - name: deploy
+        uses: JamesIves/github-pages-deploy-action@v4.2.3
+        with:
+          branch: gh-pages
+          folder: build 
+          token: "${{ secrets.DEPLOY_TOKEN }}"  
