--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -2,7 +2,8 @@ name: Deploy static content to Pages
 on: 
   push:
     branches:
-      - main
+      - master
+      - dev
 
 jobs:
   Build:
@@ -10,9 +11,9 @@ jobs:
     steps:
     # 步骤名称
     - name: checkout code
-      uses: actions/checkout@v4
-    - name: actions/setup-node@v4
-      uses: actions/setup-node@v4
+      uses: actions/checkout@v2
+    - name: actions/setup-node@v2
+      uses: actions/setup-node@v2   
       with:
         node-version: '18'
         cache: 'yarn'
