--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/setup-node@v2   
       with:
         node-version: '18'
-        cache: 'yarn'
-        cache-dependency-path: '**/yarn.lock'
+        # cache: 'yarn'
+        # cache-dependency-path: '**/yarn.lock'
     # 缓存 有需要可以开启 同时 setu node 也可以进行缓存
     # - name: yarn cache
     #   id: yarn-cahce-dir-path
