--- a/.github/workflows/blog_workflow.yml
+++ b/.github/workflows/blog_workflow.yml
@@ -1,55 +1,53 @@
+# 将静态内容部署到 GitHub Pages 的简易工作流程
 name: Deploy static content to Pages
-on: 
+
+on:
+  # 仅在推送到默认分支时运行。
   push:
-    branches:
-      - main
+    branches: ['main']
+
+  # 这个选项可以使你手动在 Action tab 页面触发工作流
+  workflow_dispatch:
+
+# 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages。
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# 允许一个并发的部署
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
+
+# ----分割线：上面的内容与静态网址是一样的，一般不用改-----
 
 jobs:
-  Build:
+  # 单次部署的工作描述
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-    # 步骤名称
-    - name: checkout code
-      uses: actions/checkout@v2
-    - name: actions/setup-node@v2
-      uses: actions/setup-node@v2   
-      with:
-        node-version: '18'
-        # cache: 'yarn'
-        # cache-dependency-path: '**/yarn.lock'
-    # 缓存 有需要可以开启 同时 setu node 也可以进行缓存
-    # - name: yarn cache
-    #   id: yarn-cahce-dir-path
-    #   run: echo "::set-output name=dir::$(yarn cache dir)"
-    # - uses: actions/cache@v2
-    #   id: yarn-cache
-    #   with: 
-    #     path: ${{ steps.yarn-cahce-dir-path.outputs.dir }}
-    #     key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-    #     restore-keys: | 
-    #       ${{ runner.os }}-yarn-    
-    - run: yarn install && yarn build  
-    # 上传打包好的文件，所以下一步可以使用
-    - name: upload files 
-      uses: actions/upload-artifact@v2
-      with: 
-        name: build-pages
-        path: build
-        retention-days: 1
-  Deploy: 
-    needs: Build # 确保build 阶段完成
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v2
-      - name: download build files
-        uses: actions/download-artifact@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Node
+        uses: actions/setup-node@v4
         with:
-          name: build-pages
-          path: build
-      - name: deploy
-        uses: JamesIves/github-pages-deploy-action@v4.2.3
+          node-version: 18
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          branch: gh-pages
-          folder: build 
-          token: "${{ secrets.DEPLOY_TOKEN }}"  
+          # Upload dist repository
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
